This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
3/2/17:SEM_3-6-3
3/2/17: Made it retry once when there is a timeout during fast continuous
acquisition even if CameraRetries is 0.

3/2/17: Added output of aligned piece coordinates in montage overview to mdoc
file.

3/1/17: Make sure beam stays blanked except when acquiring for Realign to Item
when it goes out of Low Dose (In 3.6).

2/26/17: Added script command to wait until a specified time after midnight or
an alternative time.

2/26/17: Added script commands to report and set the value of many user
settings by the name used in the settings file.

2/26/17: Made coma-free alignment routine average the estimated misalignment
over multiple iterations, and added a menu option to run one more iteration.

2/26/17: Added Focus menu option to make an array of FFTs of images with beam
tilt in 8 different directions (a Zemlin tableau).

2/26/17: Fixed SetCameraArea script command to take F, H, etc sizes (In 3.6).

2/21/17: Changed message from SEMCCD plugin about two copies to refer to
looking for a hung copy of DM; released mutex earlier (In 3.6).

2/20/17: Fixed copying of remote K2 references when there just a
DigitalMicrographReferencePath and no RemoteDMRefererencePath entry (In 3.6).

* 2/20/17: Increased size of FFT stack to 8 (In 3.6).

* 2/20/17: Showed camera name and dose rate on as many image types as would be
meaningful (In 3.6).

2/19/17: Added report of difference from previous calibration when doing
coma-free calibration (In 3.6).

2/18/17: Switched to using standard API for Direct Electron camera instead of
COM interface.  To use a DE camera, a small plugin, DEcamPlugin.dll, and the
interface library, DeInterface.Win32.dll, must be put in the directory with