@@ -3,6 +3,12 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+3/3/17: Gave proper error message if BackgroundTilt is used without the
+property set to open a fourth socket (In 3.6).
+
+3/3/17: Fixed changes in current directory from saving calibrations and
+short-term calibrations (In 3.6).
+
 3/2/17:SEM_3-6-3
 3/2/17: Made it retry once when there is a timeout during fast continuous
 acquisition even if CameraRetries is 0.
